fix search bar layout on mobile screens
Change-Type: manual-edit

--- a/app/components/search-bar/search-bar.module.css
+++ b/app/components/search-bar/search-bar.module.css
@@ -14,7 +14,7 @@
 }
 @media (max-width: 480px) {
   .form {
-    width: 290px;
+    width: 100%;
   }
 }
 
